--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,10 @@
   <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-  
-  <script type="text/babel" src="../src/index.js"></script>
 
+  <!-- <script type="text/babel" src="../src/index.js"></script> -->
+  <script src="bundle.js"></script>
+  
   <footer class="footer">
     <div class="container">
 
