--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 
 
   <div class="container">
+    <div class="header"></div>
     <div class="row">
       <div class="col-md-6"><h1>col-md-1</h1></div>
       <div class="col-md-6"><div id="folding-papers-display"></div></div>
