switching to qreact quill text editor

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
   <!-- Assorted iOS-related metadata. -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Bootstrap 3 -->
-  <link href="/css/stylesheets/sass/styles.css" rel="stylesheet" type="text/css" />
+  <!-- Bootstrap 3 and Quill -->
+  <link rel="stylesheet" href="/css/stylesheets/sass/styles.css" type="text/css" />
+  <!-- need to import all plugin styles through SASS! -->
+  <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
 
   <!-- <link href="./node_modules/pdfjs-dist/web/pdf_viewer.css" rel="stylesheet" type="text/css" /> -->
   <!-- This snippet is used in production (included from viewer.html) -->
@@ -23,9 +25,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
 
-  <!-- ReactJS -->
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
   <!-- need for imports -->
 
